// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Contact page > output > invalid (empty) snapshot (disables submit button 1`] = `
<article
  className="contact active"
>
  <header>
    <h2
      className="h2 article-title"
    >
      Contact
    </h2>
  </header>
  <section
    className="contact-form"
  >
    <h3
      className="h3 form-title"
    >
      Contact Form
    </h3>
    <form
      action="https://formspree.io/f/mkndboev"
      className="form"
      data-form={true}
      method="POST"
    >
      <div
        className="input-wrapper"
      >
        <input
          className="form-input"
          name="fullname"
          onChange={[MockFunction hookProps.handleNameChange]}
          placeholder="Full name"
          required={true}
          type="text"
          value=""
        />
        <input
          className="form-input"
          name="email"
          onChange={[MockFunction hookProps.handleEmailChange]}
          placeholder="Email address"
          required={true}
          type="email"
          value=""
        />
      </div>
      <textarea
        className="form-input"
        name="message"
        onChange={[MockFunction hookProps.handleMessageChange]}
        placeholder="Your Message"
        required={true}
        value=""
      />
      <button
        className="form-btn"
        disabled={true}
        type="submit"
      >
        <SendIcon />
        <span>
          Send Message
        </span>
      </button>
    </form>
  </section>
</article>
`;

exports[`Contact page > output > snapshot 1`] = `
<article
  className="contact active"
>
  <header>
    <h2
      className="h2 article-title"
    >
      Contact
    </h2>
  </header>
  <section
    className="contact-form"
  >
    <h3
      className="h3 form-title"
    >
      Contact Form
    </h3>
    <form
      action="https://formspree.io/f/mkndboev"
      className="form"
      data-form={true}
      method="POST"
    >
      <div
        className="input-wrapper"
      >
        <input
          className="form-input"
          name="fullname"
          onChange={[MockFunction hookProps.handleNameChange]}
          placeholder="Full name"
          required={true}
          type="text"
          value="Test Full Name"
        />
        <input
          className="form-input"
          name="email"
          onChange={[MockFunction hookProps.handleEmailChange]}
          placeholder="Email address"
          required={true}
          type="email"
          value="testEmail@google.com"
        />
      </div>
      <textarea
        className="form-input"
        name="message"
        onChange={[MockFunction hookProps.handleMessageChange]}
        placeholder="Your Message"
        required={true}
        value="This is a message for testing purposes"
      />
      <button
        className="form-btn"
        disabled={false}
        type="submit"
      >
        <SendIcon />
        <span>
          Send Message
        </span>
      </button>
    </form>
  </section>
</article>
`;
